CosmicCalculator: new --listlinesatz option for wavelengths at z
Until now, CosmicCalculator would just print the observed wavelength of one
line at the given redshift with '--lineatz'. But sometimes a more general
view of the shifted spectra can be useful. However, the '--listlines'
option only printed the lines at rest frame.

With this commit, the newly added '--listlinesatz' option does the same
thing as '--listlines' (infact is uses the same function too!), but instead
of printing the restframe wavelength, it prints the observed wavelength. It
very convenient to match/demonstrate spectra for example, when one line is
known/recognized.

Also, with the number of spectral-line features in CosmicCalculator
increasing, I moved their documentation in the book to a new and dedicated
sub-section.

--- a/NEWS
+++ b/NEWS
@@ -14,6 +14,14 @@ See the end of the file for license conditions.
      will be read as floating point. This also applies to column arithmetic
      in Table.
 
+  CosmicCalculator:
+   --listlinesatz: Print the wavelength of all pre-defined spectral lines
+     at given redshift as a simple table with the line names. This is very
+     convenient and can be used in conjunction with '--obsline' for example
+     to print the observed wavelength of all lines when Lyman-alpha is at
+     4000 Angstroms with this simple command:
+        astcosmiccal --obsline=lyalpha,4000 --listlinesatz
+
   FITS:
    - New '--wcsdistortion' option allows conversion between the various WCS
      distortions. For example if you have a FITS image with the TPV-based
