--- a/NEWS
+++ b/NEWS
@@ -59,7 +59,7 @@ See the end of the file for license conditions.
   bug #58434: MakeCatalog crash when ordering is required and no usable pixels.
   bug #58455: Timezone is not portable and uses flag instead of seconds.
   bug #58696: Warp with --centeroncorner --scale making wrong size.
-
+  bug #58774: Warp' s output on a cube is a 2D image or wrong size.
 
 
 
